--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 
 :root {
   --Color-Primary: rgb(247, 172, 75);
-  --Color-secondary: rgb(36, 36, 36);
+  --Color-secondary: rgb(7, 7, 7);
+  --color-pale: #fff;
   --Icon-Size: 40px;
 }
 
@@ -27,13 +28,20 @@ body {
 
 .nav {
   background-color: rgb(247, 172, 75);
-  color: #000;
+  color: var(--Color-secondary);
   display: flex;
   padding: 10px;
   flex-direction: column;
   width: 100px;
   height: 100%;
   position: fixed;
+  left: -100px;
+  z-index: 1000px;
+  transition: left 0.3s ease-in-out;
+}
+
+.nav#visible {
+  left: 0px;
 }
 
 header {
@@ -81,22 +89,60 @@ header {
 }
 
 .nav-list a:hover {
-  background-color: #000;
+  background-color: var(--Color-secondary);
 color: #fff;
 
 }
 .nav-logo a{
 text-decoration: none;
 color: black;
+left: 200px;
+font-size: 50px;
 }
 
+.navbar{
+  font-size: 2rem;
+  padding: 40px;
+  background-color: var(--Color-Primary);
+  position: fixed;
+  display: flex;
+  justify-content: space-between;  
+  align-items: center;
+  flex-direction: row;
+  height: 100px;
+  width: 100%;
+ z-index: 100;
+ overflow: hidden;
+ transition: 0.3s ease-in-out;
+
+}
+
+.navbar-button {
+  cursor: pointer;
+  z-index: 10000px;
+}
 /*Main Body*/
 
 .body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 20px 20px 20px 120px;
+  padding: 120px 20px 20px 20px;
+  background:
+        /* top, transparent black, faked with gradient */ 
+        linear-gradient(
+          rgba(0, 0, 0, 0.8), 
+          rgba(0, 0, 0, 0.7)
+        ),
+        /* bottom, image */
+      url('./Components/bg.jpg'),;
+      object-fit: none;
+      background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.body#visible {
+  background-color: rgb(0, 0, 0, 0.25)  !important;
 }
 
 .body h1 {
@@ -133,17 +179,123 @@ span {
 
 /*skills Grid*/
 
+
+.skills-programming {
+
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 50%;
+  gap: 20px;
+ 
+  
+ }
+
 .skills-show {
 
- display: grid;
- justify-content: center;
- grid-template-columns: 30% 30% 30%;
- grid-template-rows:  1fr 1fr 1fr 50px;
- gap: 20px;
-
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr;
+    grid-template-rows:  1fr 1fr 1fr 1fr 1fr 1fr 1fr 50px;
+    gap: 20px;
+   
+    
+   }
  
+
+@media screen and (min-width: 600px)  {
+  .skills-show {
+
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 40% 40%;
+    grid-template-rows:  1fr 1fr 1fr 1fr 50px;
+    gap: 20px;
+   
+    
+   }
+
+   
+.skills-programming {
+
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 50%;
+  gap: 20px;
+ 
+  
+ }
+
+ .body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px 20px 20px 120px;
 }
 
+.nav {
+  left: 0px !important;
+
+}
+.navbar {
+  transition: top 0.3s ease-in-out;
+  top: -100px;
+}
+}
+
+
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+    .skills-show {
+  
+      display: grid;
+      justify-content: center;
+      grid-template-columns:  30% 30% 30% ;
+      grid-template-rows:  1fr 1fr 1fr 50px;
+      gap: 20px;
+     
+      
+     }
+
+     
+.skills-programming {
+
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 29% 30% 29%;
+  grid-template-rows: 1fr 50%;
+  gap: 20px;
+ 
+  
+ }
+
+ .body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px 20px 20px 120px;
+}
+
+.nav {
+
+  left: 0px !important;
+}
+  }
+  
+
+@media screen and (min-width: 1280px) {
+  .skills-show {
+
+    display: grid;
+    justify-content: center;
+    grid-template-columns:  22% 22% 22% 22% ;
+    grid-template-rows:   1fr 1fr 50px;
+    gap: 20px;
+   
+    
+   }
+
+   
 .skills-programming {
 
   display: grid;
@@ -155,10 +307,24 @@ span {
   
  }
 
+ .body {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px 20px 20px 120px;
+}
+
+.nav {
+  left: 0px !important;
+
+}
+}
+
 .skills-card {
   display: flex;
   flex-direction: column;
-  background-color: #000;
+  background-color: var(--Color-secondary);
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -167,6 +333,7 @@ span {
   font-size: 40px;
   gap: 20px;
   transition: 250ms;
+
 }
 
 .skills-card h3 {
@@ -179,6 +346,8 @@ span {
 
 .skills-card:hover {
   translate: 0px -10px;
+
+
 }
 
 .myProgress {
@@ -293,6 +462,52 @@ span {
   }
   
 
+/*Work*/ 
+.work-card {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--Color-secondary);
+  color: #fff;
+  padding: 20px;
+  text-align: left;
+  align-items: left;
+  border-radius: 10px;
+  font-size: 100%;
+  gap: 20px;
+  transition: 250ms;
+ 
+}
+
+.work-card h3 {
+  font-size: 30px;
+}
+
+.work-card h2 {
+  font-size: 45px;
+  margin: 0;
+}
+
+.work-card:hover {
+  translate: 0px -10px;
+
+
+}
+
+#EPU {
+  background:
+        /* top, transparent black, faked with gradient */ 
+        linear-gradient(
+          rgba(0, 0, 0, 0.8), 
+          rgba(0, 0, 0, 0.7)
+        ),
+        /* bottom, image */
+      url('https://epu.edu.iq/wp-content/uploads/2022/03/11111-1-1200x759.jpg');
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+      background-position:40%;
+}
+
+
 /* contact */
 .Contact {
   display: flex;
@@ -301,13 +516,13 @@ span {
 }
 
 .contact-content {
-
+margin-top: 10px;
 display:flex;
 align-self:center;
 width: fit-content;
 gap: 20px;
-background-color: #000;
-
+background-color: var(--Color-Primary);
+flex-direction: column;
 border-radius: 10px;
 flex-wrap: nowrap;
 }
@@ -315,8 +530,8 @@ flex-wrap: nowrap;
 .contact-card{
   display: flex;
   flex-direction: column;
-  background-color: #000;
-  color: #fff;
+  background-color: var(--Color-Primary);
+  color: var(--Color-secondary) !important;
   padding: 20px;
   text-align: center;
   align-items: center;
@@ -334,10 +549,10 @@ flex-wrap: nowrap;
 }
 
 .contact-card:hover {
-  translate: 0px -10px;
+  translate: 8px 0px;
   box-shadow: #fff;
-  background-color: var(--Color-Primary);
-   color: #000;
+  background-color: var(--Color-secondary) !important;
+   color:var(--color-pale)!important;
 }
 
 
