--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Roboto:wght@300;500&display=swap');
+
 
 *{
   list-style: none;
@@ -12,8 +14,9 @@
 :root {
   --Color-Primary: rgb(247, 172, 75);
   --Color-secondary: rgb(7, 7, 7);
-  --color-pale: #fff;
+  --color-pale: #EBEBD3;
   --Icon-Size: 40px;
+  --color-princles: #083D77;
 }
 
 html {
@@ -22,8 +25,13 @@ html {
 
 body {
   display: inline;
+  font-family: 'Roboto', sans-serif;
 }
 
+span a {
+  text-decoration: none;
+  color: var(--color-princles);
+}
 /*Header and Sidebar*/
 
 .nav {
@@ -32,16 +40,23 @@ body {
   display: flex;
   padding: 10px;
   flex-direction: column;
-  width: 100px;
+  width: 110px;
   height: 100%;
   position: fixed;
-  left: -100px;
-  z-index: 1000px;
+  left: -110px;
+  z-index: 100;
   transition: left 0.3s ease-in-out;
+  overflow: hidden;
+
 }
 
-.nav#visible {
+.nav.visible {
   left: 0px;
+  box-shadow:0 0 0 10000px rgba(0,0,0,.50);
+}
+.nav.invisible {
+  left: -110px;
+  box-shadow: none;
 }
 
 header {
@@ -68,7 +83,7 @@ header {
 .line-contacts {
   z-index: 1000000;
   height: 2px;
-  background: #fff;
+  background: var(--color-pale);
   width: 100%;
   border-radius: 200px;
 }
@@ -90,16 +105,25 @@ header {
 
 .nav-list a:hover {
   background-color: var(--Color-secondary);
-color: #fff;
+color: var(--color-pale);
 
 }
-.nav-logo a{
+.nav-logo-sidebar a, .nav-logo a{
 text-decoration: none;
 color: black;
 left: 200px;
 font-size: 50px;
+font-family: 'Chakra Petch', sans-serif;
+
 }
 
+.nav-logo-sidebar {
+  display: none;
+}
+
+.logotag {
+  font-family: 'Stick No Bills', sans-serif;
+}
 .navbar{
   font-size: 2rem;
   padding: 40px;
@@ -113,13 +137,18 @@ font-size: 50px;
   width: 100%;
  z-index: 100;
  overflow: hidden;
- transition: 0.3s ease-in-out;
+ transition: 0.3s ease-in-out !important;
+
+}
+.navbar-button-sidebar {
+font-size: 2rem;
 
 }
 
 .navbar-button {
   cursor: pointer;
   z-index: 10000px;
+  font-size: 2rem;
 }
 /*Main Body*/
 
@@ -139,6 +168,8 @@ font-size: 50px;
       object-fit: none;
       background-repeat: no-repeat;
     background-size: 100% 100%;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .body#visible {
@@ -236,12 +267,21 @@ span {
 
 .nav {
   left: 0px !important;
+  box-shadow: none;
 
 }
 .navbar {
-  transition: top 0.3s ease-in-out;
-  top: -100px;
+  transition: left 0.3s ease-in-out !important; 
+  top: -100px !important;
 }
+
+.navbar-button-sidebar{
+  display: none;
+}
+.nav-logo-sidebar{
+  display: flex;
+}
+
 }
 
 
@@ -325,7 +365,7 @@ span {
   display: flex;
   flex-direction: column;
   background-color: var(--Color-secondary);
-  color: #fff;
+  color: var(--color-pale);
   padding: 20px;
   text-align: center;
   align-items: center;
@@ -467,7 +507,7 @@ span {
   display: flex;
   flex-direction: column;
   background-color: var(--Color-secondary);
-  color: #fff;
+  color: var(--color-pale);
   padding: 20px;
   text-align: left;
   align-items: left;
@@ -538,19 +578,19 @@ flex-wrap: nowrap;
   border-radius: 10px;
   font-size: var(--Icon-Size);
   transition: 250ms;
-  box-shadow: #fff;
+  box-shadow: var(--color-pale);
 
 }
 
 .contact-card a {
   text-decoration: none;
-  color: #fff;
+  color: var(--color-pale);
   
 }
 
 .contact-card:hover {
   translate: 8px 0px;
-  box-shadow: #fff;
+  box-shadow: var(--color-pale);
   background-color: var(--Color-secondary) !important;
    color:var(--color-pale)!important;
 }
