--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,13 @@ box-shadow: -5px -5px 0 0 var(--color-princles) inset;
   font-family: 'Chakra Petch', sans-serif;
   font-size: 2.8rem;
 }
+
+.nav-logo{ 
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .navbar{
   font-size: 2rem;
   padding: 40px;
@@ -227,17 +234,17 @@ font-size: 2rem;
 }
 
 .body h1 {
-  font-size: 55px;
-  padding: 20px;
-}
-
-.body h2 {
   font-size: 45px;
   padding: 20px;
 }
 
+.body h2 {
+  font-size: 35px;
+  padding: 20px;
+}
+
 .body p {
-  font-size: 30px;
+  font-size: 25px;
   padding: 10px;
 }
 
